--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "test:integration": "npm test -- --watch -c jest-integration-config.js",
     "test:staged": "npm test -- --findRelatedTests",
     "test:ci": "npm test -- --coverage"
-
   },
   "keywords": [],
   "author": "",
@@ -18,6 +17,7 @@
   "devDependencies": {
     "@types/jest": "^26.0.20",
     "@types/node": "^14.14.22",
+    "@types/validator": "^13.1.3",
     "@typescript-eslint/eslint-plugin": "^4.14.2",
     "eslint": "^7.19.0",
     "eslint-config-standard-with-typescript": "^20.0.0",
@@ -30,5 +30,8 @@
     "lint-staged": "^10.5.3",
     "ts-jest": "^26.5.0",
     "typescript": "^4.1.3"
+  },
+  "dependencies": {
+    "validator": "^13.5.2"
   }
 }
