fix: all errors fixed

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,9 +4,11 @@
         "project": "./tsconfig.json"
     },
     "rules":{
-        "@typescript-eslint/strict-boolean-expressions":"off",
-        "no-unused-vars": "off",
-        "@typescript-eslint/no-unused-vars": ["error"],
-        "@typescript-eslint/no-floating-promises": ["error"]
+        "@typescript-eslint/strict-boolean-expressions": "off",
+        "@typescript-eslint/return-await": "off",
+        "@typescript-eslint/comma-spacing": "off",
+        "@typescript-eslint/no-floating-promises": "off",
+        "@typescript-eslint/no-misused-promises": "off",
+        "@typescript-eslint/consistent-type-definitions": "off"
     }
 }
