--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "sucrase": "^3.17.1",
     "supertest": "^6.1.3",
     "ts-jest": "^26.5.0",
+    "ts-node-dev": "^1.1.1",
     "typescript": "^4.1.3"
   },
   "dependencies": {
