--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/bcrypt": "^3.0.0",
     "@types/express": "^4.17.11",
     "@types/jest": "^26.0.20",
+    "@types/jsonwebtoken": "^8.5.0",
     "@types/mongodb": "^3.6.6",
     "@types/node": "^14.14.22",
     "@types/supertest": "^2.0.10",
@@ -33,6 +34,7 @@
     "git-commit-msg-linter": "^3.0.0",
     "husky": "^4.3.8",
     "jest": "^26.6.3",
+    "jsonwebtoken": "^8.5.1",
     "lint-staged": "^10.5.3",
     "sucrase": "^3.17.1",
     "supertest": "^6.1.3",
