--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "sucrase-node src/main/server.ts",
+    "start": "node dist/main/server.js",
+    "build": "rimraf dist && tsc",
+    "dev": "sucrase-node src/main/server.ts",
     "test": "jest --passWithNoTests --silent --noStackTrace --runInBand",
     "test:verbose": "jest --passWithNoTests --runInBand",
     "test:unit": "npm test -- --watch -c jest-unit-config.js",
@@ -36,6 +38,7 @@
     "jest": "^26.6.3",
     "jsonwebtoken": "^8.5.1",
     "lint-staged": "^10.5.3",
+    "rimraf": "^3.0.2",
     "sucrase": "^3.17.1",
     "supertest": "^6.1.3",
     "ts-jest": "^26.5.0",
