--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node dist/main/server.js",
+    "start": "nodemon dist/main/server.js",
     "build": "rimraf dist && tsc",
     "dev": "sucrase-node src/main/server.ts",
     "test": "jest --passWithNoTests --silent --noStackTrace --runInBand",
@@ -51,6 +51,7 @@
     "express": "^4.17.1",
     "fast-glob": "^3.2.5",
     "mongodb": "^3.6.4",
+    "nodemon": "^2.0.7",
     "validator": "^13.5.2"
   }
 }
