--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,8 @@
         "target": "es2019",
         "esModuleInterop": true,
         "strictNullChecks": false,
+        "sourceMap": true,
+        "rootDir": "src"
         
     },
     "include": [
