--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "jest": "^26.6.3",
     "jsonwebtoken": "^8.5.1",
     "lint-staged": "^10.5.3",
+    "mockdate": "^3.0.2",
     "rimraf": "^3.0.2",
     "sucrase": "^3.17.1",
     "supertest": "^6.1.3",
