--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,14 +6,16 @@
         "esModuleInterop": true,
         "strictNullChecks": false,
         "sourceMap": true,
-        "rootDir": "src"
-        
+        "rootDir": "src",
+        "baseUrl": "src",
+        "paths": {
+            "@/*":["*"]
+        }
     },
     "include": [
         "src"
     ],
     "exclude": [
-        "**/*.spec.ts",
-        "**/*.test.ts"
+        
     ]
 }
