feat: make a query to work and use bulder patterns to build agregation query

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,6 +12,7 @@
         "@typescript-eslint/consistent-type-definitions": "off",
         "@typescript-eslint/ignore-path": "off",
         "@typescript-eslint/no-var-requires": "off",
-        "@typescript-eslint/restrict-template-expressions": "off"
+        "@typescript-eslint/restrict-template-expressions": "off",
+        "@typescript-eslint/explicit-function-return-type": "off"
     }
 }
