--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "nodemon dist/main/server.js",
     "build": "rimraf dist && tsc -p tsconfig-build.json",
-    "debug":"nodemon -L --watch ./dist --inspect=localhost:9222 --nolazy ./dist/main/server.js",
+    "postbuild":"copyfiles -u 1 public/**/* dist/static",
+    "debug": "nodemon -L --watch ./dist --inspect=localhost:9222 --nolazy ./dist/main/server.js",
     "dev": "sucrase-node src/main/server.ts",
     "test": "jest --passWithNoTests --silent --noStackTrace --runInBand",
     "test:verbose": "jest --passWithNoTests --runInBand",
@@ -29,6 +30,7 @@
     "@types/supertest": "^2.0.10",
     "@types/validator": "^13.1.3",
     "@typescript-eslint/eslint-plugin": "^4.14.2",
+    "copyfiles": "^2.4.1",
     "eslint": "^7.19.0",
     "eslint-config-standard-with-typescript": "^20.0.0",
     "eslint-plugin-import": "^2.22.1",
@@ -57,8 +59,7 @@
     "nodemon": "^2.0.7",
     "validator": "^13.5.2"
   },
-   "_moduleAliases":{
+  "_moduleAliases": {
     "@": "dist"
-    }
-  
+  }
 }
