--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
-  "name": "cleanNodeAPI",
+  "name": "cleannodeapi",
   "version": "2.4.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "start": "nodemon dist/main/server.js",
     "build": "rimraf dist && tsc -p tsconfig-build.json",
-    "debug":"nodemon -L --watch ./dist --inspect=localhost:9222 --nolazy ./dist/main/server.js",
+    "debug": "nodemon -L --watch ./dist --inspect=localhost:9222 --nolazy ./dist/main/server.js",
     "dev": "sucrase-node src/main/server.ts",
     "test": "jest --passWithNoTests --silent --noStackTrace --runInBand",
     "test:verbose": "jest --passWithNoTests --runInBand",
@@ -34,7 +33,7 @@
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
-    "git-commit-msg-linter": "^3.0.0",
+    "git-commit-msg-linter": "^3.1.0",
     "husky": "^4.3.8",
     "jest": "^26.6.3",
     "jsonwebtoken": "^8.5.1",
@@ -43,22 +42,30 @@
     "rimraf": "^3.0.2",
     "sucrase": "^3.17.1",
     "supertest": "^6.1.3",
-    "ts-jest": "^26.5.0",
-    "ts-node-dev": "^1.1.1",
-    "typescript": "^4.1.3"
+    "ts-jest": "^26.5.4",
+    "ts-node-dev": "^1.1.6",
+    "typescript": "^4.2.3"
   },
   "dependencies": {
-    "bcrypt": "^5.0.0",
+    "bcrypt": "^5.0.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "fast-glob": "^3.2.5",
     "module-alias": "^2.2.2",
-    "mongodb": "^3.6.4",
+    "mongodb": "^3.6.5",
     "nodemon": "^2.0.7",
     "validator": "^13.5.2"
   },
-   "_moduleAliases":{
+  "_moduleAliases": {
     "@": "dist"
-    }
-  
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/joaopedro7423/SucoDeManguinhoNode.git"
+  },
+  "bugs": {
+    "url": "https://github.com/joaopedro7423/SucoDeManguinhoNode/issues"
+  },
+  "homepage": "https://github.com/joaopedro7423/SucoDeManguinhoNode#readme",
+  "description": ""
 }
