--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "faker": "^5.5.0",
     "fast-glob": "^3.2.5",
     "module-alias": "^2.2.2",
+    "mongo-round": "^1.0.0",
     "mongodb": "^3.6.5",
     "nodemon": "^2.0.7",
     "validator": "^13.5.2"
