--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "@types/supertest": "^2.0.10",
     "@types/validator": "^13.1.3",
     "@typescript-eslint/eslint-plugin": "^4.14.2",
-    "bson-objectid": "^2.0.1",
+    "bson": "^4.3.0",
+    "bson-objectid": "^1.3.1",
+    "buffer": "^6.0.3",
     "copyfiles": "^2.4.1",
     "eslint": "^7.19.0",
     "eslint-config-standard-with-typescript": "^20.0.0",
