--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@shelf/jest-mongodb": "^1.2.3",
     "@types/bcrypt": "^3.0.0",
     "@types/express": "^4.17.11",
+    "@types/graphql": "^14.5.0",
     "@types/jest": "^26.0.20",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/mongodb": "^3.6.6",
@@ -52,11 +53,13 @@
     "typescript": "^4.2.3"
   },
   "dependencies": {
+    "apollo-server-express": "^2.22.2",
     "bcrypt": "^5.0.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "faker": "^5.5.0",
     "fast-glob": "^3.2.5",
+    "graphql": "^15.5.0",
     "module-alias": "^2.2.2",
     "mongo-round": "^1.0.0",
     "mongodb": "^3.6.5",
