--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/bcrypt": "^3.0.0",
     "@types/express": "^4.17.11",
     "@types/graphql": "^14.5.0",
+    "@types/graphql-iso-date": "^3.4.0",
     "@types/jest": "^26.0.20",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/mongodb": "^3.6.6",
@@ -60,6 +61,7 @@
     "faker": "^5.5.0",
     "fast-glob": "^3.2.5",
     "graphql": "^15.5.0",
+    "graphql-iso-date": "^3.6.1",
     "module-alias": "^2.2.2",
     "mongo-round": "^1.0.0",
     "mongodb": "^3.6.5",
