--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/supertest": "^2.0.10",
     "@types/validator": "^13.1.3",
     "@typescript-eslint/eslint-plugin": "^4.14.2",
+    "apollo-server-integration-testing": "^2.3.1",
     "bson": "^4.3.0",
     "bson-objectid": "^1.3.1",
     "buffer": "^6.0.3",
