--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "@types/jsonwebtoken": "^8.5.0",
     "@types/mongodb": "^3.6.6",
     "@types/node": "^14.14.22",
+    "@types/react": "^17.0.3",
+    "@types/react-dom": "^17.0.3",
     "@types/supertest": "^2.0.10",
     "@types/validator": "^13.1.3",
     "@typescript-eslint/eslint-plugin": "^4.14.2",
@@ -67,6 +69,8 @@
     "mongo-round": "^1.0.0",
     "mongodb": "^3.6.5",
     "nodemon": "^2.0.7",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "validator": "^13.5.2"
   },
   "_moduleAliases": {
