--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,18 @@
 {
     "compilerOptions": {
         "outDir": "dist",
+        "lib": ["DOM","DOM.Iterable","ESNext"],
         "module": "commonjs",
         "target": "es2019",
         "esModuleInterop": true,
         "strictNullChecks": false,
+        "moduleResolution": "Node",
+        "resolveJsonModule": true,
         "sourceMap": true,
         "allowSyntheticDefaultImports": true,
         "rootDir": "src",
         "baseUrl": "src",
+        "jsx": "react",
         "paths": {
             "@/*":["*"]
         }
