--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon dist/main/server.js",
+    "start:react": "webpack-dev-server --open",
     "build": "rimraf dist && tsc -p tsconfig-build.json",
     "postbuild": "copyfiles -u 1 public/**/* dist/static",
     "debug": "nodemon -L --watch ./dist --inspect=localhost:9222 --nolazy ./dist/main/server.js",
     "dev": "sucrase-node src/main/server.ts",
-    "test": "jest --passWithNoTests --silent --noStackTrace --runInBand",
+    "test": "jest --passWithNoTests --silent --noStackTrace --runInBand --no-cache --runInBand",
     "test:verbose": "jest --passWithNoTests --runInBand",
     "test:unit": "npm test -- --watch -c jest-unit-config.js",
     "test:integration": "npm test -- --watch -c jest-integration-config.js",
@@ -37,12 +38,14 @@
     "bson": "^4.3.0",
     "bson-objectid": "^1.3.1",
     "buffer": "^6.0.3",
+    "clean-webpack-plugin": "^4.0.0-alpha.0",
     "copyfiles": "^2.4.1",
     "eslint": "^7.19.0",
     "eslint-config-standard-with-typescript": "^20.0.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-react": "^7.23.2",
     "git-commit-msg-linter": "^3.1.0",
     "husky": "^4.3.8",
     "jest": "^26.6.3",
@@ -54,7 +57,10 @@
     "supertest": "^6.1.3",
     "ts-jest": "^26.5.4",
     "ts-node-dev": "^1.1.6",
-    "typescript": "^4.2.3"
+    "typescript": "^4.2.3",
+    "webpack": "^5.32.0",
+    "webpack-cli": "^4.6.0",
+    "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
     "apollo-server-express": "^2.22.2",
