--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "buffer": "^6.0.3",
     "clean-webpack-plugin": "^4.0.0-alpha.0",
     "copyfiles": "^2.4.1",
+    "css-loader": "^5.2.1",
     "eslint": "^7.19.0",
     "eslint-config-standard-with-typescript": "^20.0.0",
     "eslint-plugin-import": "^2.22.1",
@@ -48,14 +49,19 @@
     "eslint-plugin-react": "^7.23.2",
     "git-commit-msg-linter": "^3.1.0",
     "husky": "^4.3.8",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^26.6.3",
     "jsonwebtoken": "^8.5.1",
     "lint-staged": "^10.5.3",
     "mockdate": "^3.0.2",
+    "node-sass": "^5.0.0",
     "rimraf": "^3.0.2",
+    "sass-loader": "^11.0.1",
+    "style-loader": "^2.0.0",
     "sucrase": "^3.17.1",
     "supertest": "^6.1.3",
     "ts-jest": "^26.5.4",
+    "ts-loader": "^8.1.0",
     "ts-node-dev": "^1.1.6",
     "typescript": "^4.2.3",
     "webpack": "^5.32.0",
