--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon dist/main/server.js",
-    "start:react": "webpack-dev-server --open",
+    "start:react": "webpack serve ",
     "build": "rimraf dist && tsc -p tsconfig-build.json",
     "postbuild": "copyfiles -u 1 public/**/* dist/static",
     "debug": "nodemon -L --watch ./dist --inspect=localhost:9222 --nolazy ./dist/main/server.js",
@@ -31,6 +31,7 @@
     "@types/node": "^14.14.22",
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.3",
+    "@types/react-router-dom": "^5.1.7",
     "@types/supertest": "^2.0.10",
     "@types/validator": "^13.1.3",
     "@typescript-eslint/eslint-plugin": "^4.14.2",
@@ -66,7 +67,7 @@
     "typescript": "^4.2.3",
     "webpack": "^5.32.0",
     "webpack-cli": "^4.6.0",
-    "webpack-dev-server": "^3.11.2"
+    "webpack-dev-server": "^3.7.1"
   },
   "dependencies": {
     "apollo-server-express": "^2.22.2",
@@ -83,6 +84,7 @@
     "nodemon": "^2.0.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.2.0",
     "validator": "^13.5.2"
   },
   "_moduleAliases": {
