--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "license": "ISC",
   "devDependencies": {
     "@shelf/jest-mongodb": "^1.2.3",
+    "@testing-library/react": "^11.2.6",
     "@types/bcrypt": "^3.0.0",
     "@types/express": "^4.17.11",
     "@types/graphql": "^14.5.0",
@@ -44,6 +45,7 @@
     "css-loader": "^5.2.1",
     "eslint": "^7.19.0",
     "eslint-config-standard-with-typescript": "^20.0.0",
+    "eslint-plugin-cypress": "^2.11.2",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
@@ -52,6 +54,7 @@
     "husky": "^4.3.8",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^26.6.3",
+    "jest-transform-stub": "^2.0.0",
     "jsonwebtoken": "^8.5.1",
     "lint-staged": "^10.5.3",
     "mockdate": "^3.0.2",
