--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,12 @@
 {
     "compilerOptions": {
         "outDir": "dist",
-        "lib": ["DOM","DOM.Iterable","ESNext"],
-        "module": "commonjs",
-        "target": "es2019",
+        "lib": ["dom","dom.iterable","esnext"],
+        "module": "esnext",
+        "target": "es6",
         "esModuleInterop": true,
         "strictNullChecks": false,
-        "moduleResolution": "Node",
+        "moduleResolution": "node",
         "resolveJsonModule": true,
         "sourceMap": true,
         "allowSyntheticDefaultImports": true,
@@ -15,12 +15,14 @@
         "jsx": "react",
         "paths": {
             "@/*":["*"]
-        }
+        },
+        "allowJs": true,
+        
     },
     "include": [
         "src"
     ],
     "exclude": [
-        
+        "src/main/test/cypress"
     ]
 }
