--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "husky": "^4.3.8",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^26.6.3",
+    "jest-localstorage-mock": "^2.4.10",
     "jest-transform-stub": "^2.0.0",
     "jsonwebtoken": "^8.5.1",
     "lint-staged": "^10.5.3",
