--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "cleannodeapi",
   "version": "3.0.0",
   "main": "index.js",
+  
   "scripts": {
     "start": "nodemon dist/main/server.js",
     "start:react": "webpack serve ",
@@ -28,6 +29,7 @@
     "@types/graphql-iso-date": "^3.4.0",
     "@types/jest": "^26.0.20",
     "@types/jsonwebtoken": "^8.5.0",
+    "@types/module-alias": "^2.0.0",
     "@types/mongodb": "^3.6.6",
     "@types/node": "^14.14.22",
     "@types/react": "^17.0.3",
@@ -75,6 +77,7 @@
   },
   "dependencies": {
     "apollo-server-express": "^2.22.2",
+    "axios": "^0.21.1",
     "bcrypt": "^5.0.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
@@ -93,6 +96,9 @@
   },
   "_moduleAliases": {
     "@": "dist"
+  },
+  "engines": {
+    "node": "12.x"
   },
   "repository": {
     "type": "git",
