--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,8 +2,8 @@
     "compilerOptions": {
         "outDir": "dist",
         "lib": ["dom","dom.iterable","esnext"],
-        "module": "esnext",
-        "target": "es6",
+        "module": "CommonJS",
+        "target": "ES2019",
         "esModuleInterop": true,
         "strictNullChecks": false,
         "moduleResolution": "node",
